--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Nov 29 22:50:03 BRST 2016
-ndk.dir=/Users/user/Library/Android/sdk/ndk-bundle
-sdk.dir=/Users/user/Library/Android/sdk
+#Wed Dec 07 09:24:31 BRST 2016
+sdk.dir=D\:\\sdk
