--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'com.android.support:multidex:1.0.0'
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:recyclerview-v7:22.2.0'
 }
