--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Dec 07 09:24:31 BRST 2016
-sdk.dir=D\:\\sdk
+#Sun Dec 11 10:30:02 BRST 2016
+ndk.dir=/Users/user/Library/Android/sdk/ndk-bundle
+sdk.dir=/Users/user/Library/Android/sdk
