--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Dec 11 10:30:02 BRST 2016
-ndk.dir=/Users/user/Library/Android/sdk/ndk-bundle
-sdk.dir=/Users/user/Library/Android/sdk
+#Mon Jan 02 12:11:28 BRST 2017
+sdk.dir=D\:\\Sdk
